update Todo object

--- a/js/TodoObjectTest.html
+++ b/js/TodoObjectTest.html
@@ -2,9 +2,10 @@
 <head>
 	
 	<title>testing objects</title>
+	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.0/jquery.min.js'></script>
 	<script src='TodoObject.js'></script>
 </head>
 <body>
-	
+	<a href="#">hello</a>
 </body>
 </html>
