--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link rel='stylesheet' type='text/css' href='css/main.css'/>
+    <!-- <link rel='stylesheet' type='text/css' href='css/main.css'/> -->
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel='stylesheet' type='text/css' href='stylesheets/main.css'/>
   </head>
   <body>
     <div class="formAddNew container">
