--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- <link rel='stylesheet' type='text/css' href='css/main.css'/> -->
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel='stylesheet' type='text/css' href='stylesheets/main.css'/>
+    <link rel='stylesheet' type='text/css' href='css/main.css'/>
   </head>
   <body>
     <div class="formAddNew container">
@@ -82,9 +82,7 @@
         <div class="accordion" id="accordion2">
           <div class="accordion-group">
             <div class="accordion-heading text-left">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-                Pick up kids
-              </a>
+              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">Pick up kids</a>
             </div>
             <div id="collapseOne" class="accordion-body collapse">
               <div class="accordion-inner">
@@ -95,9 +93,7 @@
           </div>
           <div class="accordion-group">
             <div class="accordion-heading text-left">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-                Mow Lawn
-              </a>
+              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">Mow Lawn</a>
             </div>
             <div id="collapseTwo" class="accordion-body collapse">
               <div class="accordion-inner">
@@ -112,6 +108,8 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/TodoObject.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
