--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Sign in &middot; Twitter Bootstrap</title>
+    <title>GTD Todo App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -24,60 +24,56 @@
         </form>
       </div>
       <hr class="topBarDivider">
-      <div class="text-left">
-        <form class="form-inline text-center">
+      <div class="text-center">
+        <div class="input-append">
           <input type="text" id="addText" class="span5 input-large taskTitle" placeholder="new item">
-          <div class="btn-group">
-            <button id="addBtn" class="unselectable btn btn-medium btn-primary">Add</button>
-            <a href="#myModal" role="button" class="unselectable btn btn-medium btn-primary" data-toggle="modal">Options</a>
-          </div>
-        </form>
-        <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-            <h3 id="myModalLabel">Add Item Options</h3>
-          </div>
-          <div class="modal-body">
-            <form>
-            	<input type="text" id="optionsText" class="span5 input-large taskTitle" placeholder="new item">
-              <textarea class="span5" rows="5" placeholder="description..." id='optionsDescription'></textarea>
-          		<input type="text" class="span5 input-large" placeholder="Tags..." id='optionsTags'>
-              <!-- <hr> -->
-              <div class="input-prepend input-append duedate">
-                <span class="add-on">Due</span>
-                <input class="input-small" type='text' id='datepicker' placeholder='date'>
-                <input class="input-small add-on whitebg" type='text' id='clockpick' placeholder='time'>
-              </div>
-
-              <div class="disInline dropdown">
-                <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">Repeat</a>
-                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                  <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Sunday</p></a></li>
-                  <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Monday</p></a></li>
-                  <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Tuesday</p></a></li>
-                  <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Wednesday</p></a></li>
-                  <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Thursday</p></a></li>
-                  <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Friday</p></a></li>
-                  <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Saturday</p></a></li>
-                </ul>
-              </div>
-              <div class="disInline dropdown">
-                <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">Importance</a>
-                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                  <li><a>High</a></li>
-                  <li><a>Med</a></li>
-                  <li><a>Low</a></li>
-                </ul>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button class="unselectable btn" data-dismiss="modal" aria-hidden="true">Close</button>
-            <button id='optionsAdd' class="unselectable btn btn-primary">Add</button>
-          </div>
+          <button id="addBtn" class="unselectable btn btn-medium btn-primary">Add</button>
+          <a href="#myModal" role="button" class="unselectable btn btn-medium btn-primary" data-toggle="modal">Options</a>
         </div>
         <div class="accordion" id="accordion2">
         </div>
+      </div>
+    </div>
+    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="myModalLabel">Add Item Options</h3>
+      </div>
+      <div class="modal-body">
+        <form>
+          <input type="text" id="optionsText" class="span5 input-large taskTitle" placeholder="new item">
+          <textarea class="span5" rows="5" placeholder="description..." id='optionsDescription'></textarea>
+          <input type="text" class="span5 input-large" placeholder="Tags..." id='optionsTags'>
+          <div class="input-prepend input-append duedate">
+            <span class="add-on">Due</span>
+            <input class="input-small" type='text' id='datepicker' placeholder='date'>
+            <input class="input-small add-on whitebg" type='text' id='clockpick' placeholder='time'>
+          </div>
+          <div class="disInline dropdown">
+            <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">Repeat</a>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+              <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Sunday</p></a></li>
+              <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Monday</p></a></li>
+              <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Tuesday</p></a></li>
+              <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Wednesday</p></a></li>
+              <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Thursday</p></a></li>
+              <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Friday</p></a></li>
+              <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Saturday</p></a></li>
+            </ul>
+          </div>
+          <div class="disInline dropdown">
+            <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">Importance</a>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+              <li><a>High</a></li>
+              <li><a>Med</a></li>
+              <li><a>Low</a></li>
+            </ul>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="unselectable btn" data-dismiss="modal" aria-hidden="true">Close</button>
+        <button id='optionsAdd' class="unselectable btn btn-primary">Add</button>
       </div>
     </div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
@@ -86,7 +82,7 @@
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/clockpick.js"></script>
     <script type="text/javascript" src="js/TodoObject.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/moment.js"></script>
   </body>
 </html>
