--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
     <link href="css/chosen.css" rel="stylesheet">
     <link href="ui-lightness/jquery-ui-1.10.3.custom.min.css" rel="stylesheet">
     <link rel='stylesheet' type='text/css' href='css/main.css'/>
+    <link href='http://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="formAddNew container">
     	<div class="text-right">
-        <form class="form-search">
-        	<button data-toggle="tooltip" title="Sort by today" class="icon btn">Today</button>
-        	<img data-toggle="tooltip" title="Sort by calender day" class="icon" src="img/calender-icon.png">
-        	<button data-toggle="tooltip" title="Show all" class="icon btn">All</button>
-          <input type="text" class="input-medium search-query">
-          <button type="submit" class="btn">Search</button>
-        </form>
+        <div class="input-append pull-right">
+          <input placeholder="tags..." type="text" id="appendedInputButton" class="input-medium">
+          <p type="button" class="btn">Search</p>
+        </div>
+        <p data-toggle="tooltip" title="Show all" class="icon btn pull-right hasTooltip">All</p>
+        <i data-toggle="tooltip" title="Sort by calendar day" class="icon-calendar pull-right calendar hasTooltip"></i>
+        <p data-toggle="tooltip" title="Sort by today" class="icon btn pull-right hasTooltip">Today</p>
+        <i data-toggle="tooltip" title="Drag items here to remove" class="icon-trash pull-left trash hasTooltip"></i>
       </div>
+      <br>
       <hr class="topBarDivider">
       <div class="text-center">
         <div class="input-append">
@@ -49,6 +52,11 @@
             <input class="input-small" type='text' id='datepicker' placeholder='date'>
             <input class="input-small add-on whitebg" type='text' id='clockpick' placeholder='time'>
           </div>
+          <div data-toggle="tooltip" title="Click to change importance" class="btn unselectable hasTooltip starPadding" id="setStar">
+            <i  id="star" class="icon-star-empty menuStarStyle"></i>
+            <span id="starText">Not important</span>
+          </div>
+          <br>
           <div class="disInline dropdown">
             <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">Repeat</a>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -59,14 +67,6 @@
               <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Thursday</p></a></li>
               <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Friday</p></a></li>
               <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Saturday</p></a></li>
-            </ul>
-          </div>
-          <div class="disInline dropdown">
-            <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">Importance</a>
-            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-              <li><a>High</a></li>
-              <li><a>Med</a></li>
-              <li><a>Low</a></li>
             </ul>
           </div>
         </form>
