--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript" src="js/clockpick.js"></script>
 <script type="text/javascript" src="js/TodoObject.js"></script>
+<script type="text/javascript" src="js/localStorage.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/moment.js"></script>
 </body>
