add back in subtasks fix accordions

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
               <li><a class="unselectable"><input class="disInline" type="checkbox"><p class="day disInline">Saturday</p></a></li>
             </ul>
           </div>
+      <div class='subtasksInputs'>
+        <input class='input-large' type='text' name='subTaskTitle' placeholder='subtask title'>
+        <i class="icon-plus-sign addSubTask"></i>
+      </div>        
         </form>
       </div>
       <div class="modal-footer">
@@ -81,6 +85,7 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/select2/3.4.0/select2.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/clockpick.js"></script>
+    <script type="text/javascript" src="js/localStorage.js"></script>
     <script type="text/javascript" src="js/TodoObject.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/moment.js"></script>
