changed the space of the trash drag spot

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <p data-toggle="tooltip" title="Show all" class="icon btn pull-right hasTooltip">All</p>
         <i data-toggle="tooltip" title="Sort by calendar day" class="icon-calendar pull-right calendar hasTooltip"></i>
         <p data-toggle="tooltip" title="Sort by today" class="icon btn pull-right hasTooltip">Today</p>
-        <i data-toggle="tooltip" title="Drag items here to remove" class="icon-trash pull-left trash hasTooltip"></i>
+        <div id="trash">
+          <i data-toggle="tooltip" title="Drag items here to remove" class="icon-trash pull-left trash hasTooltip"></i>
       </div>
       <br>
       <hr class="topBarDivider">
