hide unused buttons, replace with theme buttons include theme javascript

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 					<input placeholder="tags..." type="text" id="appendedInputButton" class="input-medium">
 					<p type="button" class="btn">Search</p>
 				</div>
-				<p data-toggle="tooltip" title="Show all" class="icon btn pull-right hasTooltip">All</p>
-				<i data-toggle="tooltip" title="Sort by calendar day" class="icon-calendar pull-right calendar hasTooltip"></i>
-				<p data-toggle="tooltip" title="Sort by today" class="icon btn pull-right hasTooltip">Today</p>
+				<a class='btn themeBtn' href="#" onclick="Light()">Light</a><a class='btn themeBtn' href="#" onclick="Dark()">Dark</a>
+				<!-- <p data-toggle="tooltip" title="Show all" class="icon btn pull-right hasTooltip">All</p> -->
+				<!-- <i data-toggle="tooltip" title="Sort by calendar day" class="icon-calendar pull-right calendar hasTooltip"></i> -->
+				<!-- <p data-toggle="tooltip" title="Sort by today" class="icon btn pull-right hasTooltip">Today</p> -->
 				<div id="trash">
 					<i data-toggle="tooltip" title="Drag items here to remove" class="icon-trash pull-left trash hasTooltip"></i>
 			</div>
@@ -88,6 +89,7 @@
 		<script type="text/javascript" src="js/bootstrap.js"></script>
 		<script type="text/javascript" src="js/clockpick.js"></script>
 		<script type="text/javascript" src="js/localStorage.js"></script>
+		<script type="text/javascript" src="js/themeSwitcher.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/moment.js"></script>
 	</body>
