added a data attribute to the star

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
           <div data-toggle="tooltip" title="Click to change importance" class="btn unselectable hasTooltip starPadding" id="setStar">
             <i  id="star" class="icon-star-empty menuStarStyle"></i>
-            <span id="starText">Not important</span>
+            <span id="starText" data-num="0">Not important</span>
           </div>
           <br>
           <div class="disInline dropdown">
