keep both title fields the same

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<hr>
 			<div class="row-fluid text-center">
 				<div class="input-append span12">
-					<input type="text" class="span7 input-large taskTitle" id="simple_task_text" placeholder="New Task...">
+					<input type="text" class="span7 input-large task-title" id="simple_task_text" placeholder="New Task...">
 					<button id="add_simple_task" class="btn btn-primary">Add</button>
 					<a href="#task_modal" class="btn btn-primary" data-toggle='modal'>Options</a>
 				</div>
@@ -49,13 +49,13 @@
 			<div class="modal-body">
 				<form id='advanced_task_form'>
 					<div class="row-fluid">
-					<input id='complex_task_title' type="text" class="span12 input-large" placeholder="New Task...">
+					<input id='complex_task_title' type="text" class="span12 input-large task-title" placeholder="New Task...">
 					</div>
 					<div class="row-fluid">
 					<textarea id="complex_task_description" cols="30" rows="5" class="span12" placeholder="Description..."></textarea>
 					</div>
 					<div class="row-fluid">
-					<input id='complex_task_tags' type="text" class="span12 input-large" id="options-tags" placeholder="Tags...">
+					<input id='complex_task_tags' type="text" class="span12 input-large" placeholder="Tags...">
 					</div>
 					<div class="row-fluid">
 						<div class="span6">
