base functionality for clicking the checkbox

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<a href="#task_modal" class="btn btn-primary" data-toggle='modal'>Options</a>
 				</div>
 			</div>
-			<div class="accordion" id="task-wrapper">
+			<div class="accordion" id="task_wrapper">
 			</div>
 		</div>
 
