--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 		<script type="text/javascript" src="js/clockpick.js"></script>
 		<script type="text/javascript" src="js/localStorage.js"></script>
 		<script type="text/javascript" src="js/themeSwitcher.js"></script>
-		<script type="text/javascript" src="js/app.js"></script>
+		<!-- // <script type="text/javascript" src="js/app.js"></script> -->
 		<script type="text/javascript" src="js/newapp.js"></script>
 		<script type="text/javascript" src="js/moment.js"></script>
 	</body>
