move trash can to bottom, for some reason only working when it has it's own line

--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
 	<body>
 		<div class="container">
 			<div class="row-fluid">
-				<div id="trash" class="pull-left">
-					<i class="icon-trash trash" data-toggle="tooltip" title="Drag items here to remove"></i>
-				</div>
 				<div class="pull-right">
 					<a href="#" class="btn themeBtn">Light</a><a href="#" class="btn themeBtn">Dark</a>
 					<div class="input-append">
@@ -39,6 +36,9 @@
 			<br>
 			<div class="accordion" id="task_wrapper">
 			</div>
+			<div id="trash">
+					<i class="icon-trash trash" data-toggle="tooltip" title="Drag items here to remove"></i>
+				</div>
 		</div>
 
 
@@ -115,9 +115,9 @@
 				<!-- <p data-toggle="tooltip" title="Show all" class="icon btn pull-right hasTooltip">All</p> -->
 				<!-- <i data-toggle="tooltip" title="Sort by calendar day" class="icon-calendar pull-right calendar hasTooltip"></i> -->
 				<!-- <p data-toggle="tooltip" title="Sort by today" class="icon btn pull-right hasTooltip">Today</p> -->
-				<div id="trash">
-					<i data-toggle="tooltip" title="Drag items here to remove" class="icon-trash pull-left trash hasTooltip"></i>
-			</div>
+				<!-- <div id="trash"> -->
+					<!-- <i data-toggle="tooltip" title="Drag items here to remove" class="icon-trash pull-left trash hasTooltip"></i> -->
+			<!-- </div> -->
 			<br>
 			<hr class="topBarDivider">
 			<div class="text-center">
@@ -185,5 +185,7 @@
 		<!-- // <script type="text/javascript" src="js/app.js"></script> -->
 		<script type="text/javascript" src="js/newapp.js"></script>
 		<script type="text/javascript" src="js/moment.js"></script>
+		<script type="text/javascript">
+		</script>
 	</body>
 </html>
