--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="pull-right">
 					<a href="#" class="btn themeBtn">Light</a><a href="#" class="btn themeBtn">Dark</a>
 					<div class="input-append">
-						<input type="text" id="appendInputButton" class="input-medium" placeholder="tags...">
+						<input type="text" id="search" class="input-medium" placeholder="tags...">
 						<button class="btn" type="button">Search</button>
 					</div>
 				</div>
