--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/bootstrap-responsive.css" rel="stylesheet">
 		<link href="css/chosen.css" rel="stylesheet">
-		<link href="ui-lightness/jquery-ui-1.10.3.custom.min.css" rel="stylesheet">
+		<link href="css/redmond/jquery-ui-1.10.3.custom.min.css" rel="stylesheet">
 		<link rel='stylesheet' type='text/css' href='css/main.css'/>
 		<link rel='stylesheet' type='text/css' href='css/overrides.css'/>
 		<link href='http://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
