--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 		</div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type="text/javascript"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/select2/3.4.0/select2.min.js" type="text/javascript"></script>
+		<script type="text/javascript" src="js/select2.js" type="text/javascript"></script>
 		<script type="text/javascript" src="js/TodoObject.js"></script>
 		<script type="text/javascript" src="js/methods.js"></script>
 		<script type="text/javascript" src="js/bootstrap.js"></script>
