add muted class to trash can

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div class="accordion" id="task_wrapper">
 			</div>
 			<div id="trash">
-					<i class="icon-trash trash" data-toggle="tooltip" title="Drag items here to remove"></i>
+					<i class="icon-trash trash muted" data-toggle="tooltip" title="Drag items here to remove"></i>
 				</div>
 		</div>
 
