--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="modal-body">
 				<form id='advanced_task_form'>
 					<div class="row-fluid">
-					<input id='complex_task_title' type="text" class="span12 input-large task-title" placeholder="New Task...">
+					<input id='complex_task_text' type="text" class="span12 input-large task-title" placeholder="New Task...">
 					</div>
 					<div class="row-fluid">
 					<textarea id="complex_task_description" cols="30" rows="5" class="span12" placeholder="Description..."></textarea>
