--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 		</div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type="text/javascript"></script>
+		<script type="text/javascript" src="js/variables.js" type="text/javascript"></script>
 		<script type="text/javascript" src="js/select2.js" type="text/javascript"></script>
 		<script type="text/javascript" src="js/TodoObject.js"></script>
 		<script type="text/javascript" src="js/methods.js"></script>
