make all buttons dismiss the modal when actions are done

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</div>
 			<div class="modal-footer">
 				<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-				<button id="delete_all" class="btn btn-danger" type="button">Delete</button>
+				<button id="delete_all" data-dismiss="modal" class="btn btn-danger" type="button">Delete</button>
 			</div>
 		</div>
 
@@ -113,7 +113,7 @@
 			</div>
 			<div class="modal-footer">
 				<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-				<button id="add_complex_task" class="btn btn-primary" type="button">Add</button>
+				<button id="add_complex_task" data-dismiss="modal" class="btn btn-primary" type="button">Add</button>
 			</div>
 		</div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
