--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<div class="row-fluid">
 				<div class="pull-right">
-					<a href="#" class="btn themeBtn">Light</a><a href="#" class="btn themeBtn">Dark</a>
+					<!--<a href="#" class="btn themeBtn">Light</a><a href="#" class="btn themeBtn">Dark</a>-->
 					<div class="input-append">
 						<input type="text" id="search" class="input-medium" placeholder="tags...">
 						<button class="btn" type="button">Search</button>
@@ -125,7 +125,7 @@
 		<script type="text/javascript" src="js/bootstrap.js"></script>
 		<script type="text/javascript" src="js/clockpick.js"></script>
 		<!-- // <script type="text/javascript" src="js/localStorage.js"></script> -->
-		<!-- // <script type="text/javascript" src="js/themeSwitcher.js"></script> -->
+		<script type="text/javascript" src="js/themeSwitcher.js"></script>
 		<!-- // <script type="text/javascript" src="js/app.js"></script> -->
 		<script type="text/javascript" src="js/newapp.js"></script>
 		<script type="text/javascript" src="js/moment.js"></script>
